# game-deals-analytics

./: README.md
csv_files/game_deals/: game_deals_2023_06_11_05_52_55.csv  game_deals_2023_06_11_06_57_45.csv
csv_files/store_list/: store_list_2023_06_11_06_00_32.csv
database_scripts/: create_store_list_table.sql
docker/: docker-compose.yml  dockerfile
docker/docker_shared_folder/data/landing/store_list/: store_list_2023_06_11_07_02_03.csv  store_list_2023_06_12_21_39_35.csv
docker/docker_shared_folder/game_deals_analytics/: pyproject.toml
game_deals_analytics/: README.md  pyproject.toml
game_deals_analytics/game_deals_analytics/: deallist_downloader.py  downloader.py  storelist_downloader.py  utils.py
game_deals_analytics/game_deals_analytics/Extraction_task/: downloader.py  storelist_downloader.py
game_deals_analytics/game_deals_analytics/Load_task/: README.md
game_deals_analytics/game_deals_analytics/Transformation_task/: transformator.py
game_deals_analytics/tests/: deallist_downloader_test.py  downloader_test.py  storelist_downloader_test.py
project/: docker-compose.yml  example.env
project/dags/: etl_game_deals.py
project/database_scripts/: create_game_deals_table.sql
project/dev-packages/game_deals_analytics/Transformation_task/: Transformator base.ipynb  game_deals_transformation.ipynb
project/docker_imges/airflow/: requirements.txt
project/docker_imges/spark/: dockerfile  requirements.txt
project/scripts/: ETL_Game_Deals.py  utils.py
(+4 files in other folders)
