[tool.poetry]
name = "game-deals-analytics"
version = "0.1.0"
description = ""
authors = ["Alvaro Garcia <alvarogarciainfo@gmail.com>"]
readme = "README.md"
packages = [{include = "game_deals_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
